test/sema/exercise/struct_resolution_error_keep_going.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
// CHECK: [[# @LINE + 1 ]]:15: error: failed to resolve type 'error'
struct S { f: error }

struct S2 {}

struct S3 {}

// CHECK: [[# @LINE + 1 ]]:16: error: failed to resolve type 'error'
struct S4 { f: error }

fn main() {}
